--- a/index.html
+++ b/index.html
@@ -138,12 +138,40 @@
     z-index: 10
   }
 
+  #brand {
+    color: purple;
+    background-color: white;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    font-family: Courier, monospace;
+    font-weight: 700;
+    font-size: 28px;
+    /* or whatever fits your theme */
+    display: flex;
+    align-items: center;
+  }
+
+  #brand .brand-a {
+    color: purple;
+
+    width: 28px;
+    /* match roughly letter height */
+    height: 28px;
+    margin: 0 2px;
+    object-fit: contain;
+    vertical-align: middle;
+  }
+
+
   #tools {
     width: 100%;
     height: 100%;
     border: 0
   }
 </style>
+
+
 
 <div id="wrap">
   <svg id="svg"></svg>
@@ -158,6 +186,13 @@
   </div>
 
 </div>
+
+<div id="brand">
+  R
+  <img src="logo.png" alt="A" class="brand-a">
+  DIAL
+</div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
