--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <meta charset="utf-8" />
 <title>Radial Mindmap — viewer (minimal)</title>
+<head><link rel="icon" type="image/png" href="logo.png">
+<link rel="shortcut icon" type="image/png" href="logo.png">
+</head>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <style>
   html,
